@@ -138,6 +138,14 @@ if (NOT CMAKE_BUILD_TYPE)
     message("-- Set build type to ${CMAKE_BUILD_TYPE}")
 endif (NOT CMAKE_BUILD_TYPE)
 
+if (NOT APPLE AND NOT WIN32)
+    if (CMAKE_SIZEOF_VOID_P EQUAL 8)
+        set(LINUX_LIB_DIR lib64)
+    else (CMAKE_SIZEOF_VOID_P EQUAL 8)
+        set(LINUX_LIB_DIR lib)
+    endif (CMAKE_SIZEOF_VOID_P EQUAL 8)
+endif (NOT APPLE AND NOT WIN32)
+
 if (ENABLE_UBUNTU)
     if (ENABLE_UBUNTU_COMMAND_LINE)
         set(CMAKE_INSTALL_PREFIX click)
